# davido

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run.sh
data/: vehicle_specs.json
docs/: CEO-MEETING-CHECKLIST.md  OPTIMIZER_DESIGN.md  PRD.md  QUESTIONNAIRE-EN.md  REQUIREMENTS.md  UI_UX_30_PASS_REFINEMENT.md  UI_UX_AND_LOGIC_HARDENING.md
layouts/: example.json
src/: __init__.py  compliance.py  config.py  geometry.py  lane_generator.py  models.py  optimizer.py  revenue.py  visualization.py
tests/: test_compliance.py  test_geometry.py  test_optimizer.py
